Fix xml test